code enhancements